fix() profile pic null issue